--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-virtualized": "^9.22.2",
     "typescript": "^4.0.2"
   },
   "scripts": {
