--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,12 @@
   "name": "Hundreds of Proofs of God’s Existence",
   "icons": [
     {
+      "src": "maskableIcon.png",
+      "sizes": "650x650",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
@@ -18,8 +24,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#55bed7"
 }
