--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "https://michalgeci.github.io/HundredProofs/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#55bed7"
