--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,6 @@
   ],
   "start_url": "https://michalgeci.github.io/HundredProofs/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffffff",
   "background_color": "#55bed7"
 }
